cmake_minimum_required(VERSION 3.25)
project(CompetitiveProgramming)

set(CMAKE_CXX_STANDARD 14)

add_executable(CompetitiveProgramming
        1207lc.cpp
        862a.cpp
        862b.cpp
        862c.cpp
        863A.cpp
        866a.cpp
        basicfunc.cpp
        binarySearch.cpp
        rand.cpp cmake-build-debug/algozenith.cpp hh.cpp 869b.cpp)
